--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,23 +30,22 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  google_sign_in: ^5.4.2
+  google_sign_in: ^6.2.1
   firebase_auth: ^4.0.1
-  connectivity_plus: ^2.3.9
+  connectivity_plus: ^6.0.3 
   firebase_core: ^2.0.0
-  http: ^0.13.5
-  intl: ^0.17.0
+  http: ^1.2.1
+  intl: ^0.19.0
   cloud_firestore: ^4.0.5
-  gsheets: ^0.4.2
+  gsheets: ^0.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter_icons:
   android: "launcher_icon"
@@ -65,7 +64,6 @@ flutter_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -102,9 +100,5 @@ flutter:
         - asset: assets/fonts/SourceSansPro-Light.ttf
         - asset: assets/fonts/SourceSansPro-SemiBold.ttf
 
-
-
-
-  
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
